Sources/Core/Expression/Generated/TemplateXExprParser.swift
// Generated from /Users/lvyou4/Desktop/DSL/TemplateX/Sources/Core/Expression/Grammar/TemplateXExpr.g4 by ANTLR 4.13.2
import Antlr4

open class TemplateXExprParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = TemplateXExprParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(TemplateXExprParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, TRUE = 1, FALSE = 2, NULL = 3, PLUS = 4, MINUS = 5, MUL = 6, 
                 DIV = 7, MOD = 8, EQ = 9, NE = 10, LT = 11, GT = 12, LE = 13, 
                 GE = 14, AND = 15, OR = 16, NOT = 17, QUESTION = 18, COLON = 19, 
                 DOT = 20, COMMA = 21, LPAREN = 22, RPAREN = 23, LBRACK = 24, 
                 RBRACK = 25, LBRACE = 26, RBRACE = 27, NUMBER = 28, STRING = 29, 
                 IDENTIFIER = 30, WS = 31
	}

	public
	static let RULE_expression = 0, RULE_ternary = 1, RULE_logicalOr = 2, RULE_logicalAnd = 3, 
            RULE_equality = 4, RULE_comparison = 5, RULE_additive = 6, RULE_multiplicative = 7, 
            RULE_unary = 8, RULE_postfix = 9, RULE_postfixOp = 10, RULE_argumentList = 11, 
            RULE_primary = 12, RULE_arrayLiteral = 13, RULE_objectLiteral = 14, 
            RULE_objectEntry = 15

	public
	static let ruleNames: [String] = [
		"expression", "ternary", "logicalOr", "logicalAnd", "equality", "comparison", 
		"additive", "multiplicative", "unary", "postfix", "postfixOp", "argumentList", 
		"primary", "arrayLiteral", "objectLiteral", "objectEntry"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'true'", "'false'", "'null'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'!'", "'?'", 
		"':'", "'.'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "TRUE", "FALSE", "NULL", "PLUS", "MINUS", "MUL", "DIV", "MOD", "EQ", 
		"NE", "LT", "GT", "LE", "GE", "AND", "OR", "NOT", "QUESTION", "COLON", 
		"DOT", "COMMA", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
		"NUMBER", "STRING", "IDENTIFIER", "WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "TemplateXExpr.g4" }

	override open
	func getRuleNames() -> [String] { return TemplateXExprParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return TemplateXExprParser._serializedATN }

	override open
	func getATN() -> ATN { return TemplateXExprParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return TemplateXExprParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,TemplateXExprParser._ATN,TemplateXExprParser._decisionToDFA, TemplateXExprParser._sharedContextCache)
	}


	public class ExpressionContext: ParserRuleContext {
			open
			func ternary() -> TernaryContext? {
				return getRuleContext(TernaryContext.self, 0)
			}
			open
			func EOF() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.EOF.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_expression
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitExpression(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitExpression(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func expression() throws -> ExpressionContext {
		var _localctx: ExpressionContext
		_localctx = ExpressionContext(_ctx, getState())
		try enterRule(_localctx, 0, TemplateXExprParser.RULE_expression)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(32)
		 	try ternary()
		 	setState(33)
		 	try match(TemplateXExprParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class TernaryContext: ParserRuleContext {
			open
			func logicalOr() -> LogicalOrContext? {
				return getRuleContext(LogicalOrContext.self, 0)
			}
			open
			func QUESTION() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.QUESTION.rawValue, 0)
			}
			open
			func ternary() -> [TernaryContext] {
				return getRuleContexts(TernaryContext.self)
			}
			open
			func ternary(_ i: Int) -> TernaryContext? {
				return getRuleContext(TernaryContext.self, i)
			}
			open
			func COLON() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.COLON.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_ternary
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitTernary(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitTernary(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func ternary() throws -> TernaryContext {
		var _localctx: TernaryContext
		_localctx = TernaryContext(_ctx, getState())
		try enterRule(_localctx, 2, TemplateXExprParser.RULE_ternary)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(35)
		 	try logicalOr()
		 	setState(41)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (_la == TemplateXExprParser.Tokens.QUESTION.rawValue) {
		 		setState(36)
		 		try match(TemplateXExprParser.Tokens.QUESTION.rawValue)
		 		setState(37)
		 		try ternary()
		 		setState(38)
		 		try match(TemplateXExprParser.Tokens.COLON.rawValue)
		 		setState(39)
		 		try ternary()

		 	}


		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class LogicalOrContext: ParserRuleContext {
			open
			func logicalAnd() -> [LogicalAndContext] {
				return getRuleContexts(LogicalAndContext.self)
			}
			open
			func logicalAnd(_ i: Int) -> LogicalAndContext? {
				return getRuleContext(LogicalAndContext.self, i)
			}
			open
			func OR() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.OR.rawValue)
			}
			open
			func OR(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.OR.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_logicalOr
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitLogicalOr(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitLogicalOr(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func logicalOr() throws -> LogicalOrContext {
		var _localctx: LogicalOrContext
		_localctx = LogicalOrContext(_ctx, getState())
		try enterRule(_localctx, 4, TemplateXExprParser.RULE_logicalOr)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(43)
		 	try logicalAnd()
		 	setState(48)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == TemplateXExprParser.Tokens.OR.rawValue) {
		 		setState(44)
		 		try match(TemplateXExprParser.Tokens.OR.rawValue)
		 		setState(45)
		 		try logicalAnd()


		 		setState(50)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class LogicalAndContext: ParserRuleContext {
			open
			func equality() -> [EqualityContext] {
				return getRuleContexts(EqualityContext.self)
			}
			open
			func equality(_ i: Int) -> EqualityContext? {
				return getRuleContext(EqualityContext.self, i)
			}
			open
			func AND() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.AND.rawValue)
			}
			open
			func AND(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.AND.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_logicalAnd
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitLogicalAnd(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitLogicalAnd(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func logicalAnd() throws -> LogicalAndContext {
		var _localctx: LogicalAndContext
		_localctx = LogicalAndContext(_ctx, getState())
		try enterRule(_localctx, 6, TemplateXExprParser.RULE_logicalAnd)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(51)
		 	try equality()
		 	setState(56)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == TemplateXExprParser.Tokens.AND.rawValue) {
		 		setState(52)
		 		try match(TemplateXExprParser.Tokens.AND.rawValue)
		 		setState(53)
		 		try equality()


		 		setState(58)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class EqualityContext: ParserRuleContext {
			open
			func comparison() -> [ComparisonContext] {
				return getRuleContexts(ComparisonContext.self)
			}
			open
			func comparison(_ i: Int) -> ComparisonContext? {
				return getRuleContext(ComparisonContext.self, i)
			}
			open
			func EQ() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.EQ.rawValue)
			}
			open
			func EQ(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.EQ.rawValue, i)
			}
			open
			func NE() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.NE.rawValue)
			}
			open
			func NE(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.NE.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_equality
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitEquality(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitEquality(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func equality() throws -> EqualityContext {
		var _localctx: EqualityContext
		_localctx = EqualityContext(_ctx, getState())
		try enterRule(_localctx, 8, TemplateXExprParser.RULE_equality)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(59)
		 	try comparison()
		 	setState(64)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == TemplateXExprParser.Tokens.EQ.rawValue || _la == TemplateXExprParser.Tokens.NE.rawValue) {
		 		setState(60)
		 		_la = try _input.LA(1)
		 		if (!(_la == TemplateXExprParser.Tokens.EQ.rawValue || _la == TemplateXExprParser.Tokens.NE.rawValue)) {
		 		try _errHandler.recoverInline(self)
		 		}
		 		else {
		 			_errHandler.reportMatch(self)
		 			try consume()
		 		}
		 		setState(61)
		 		try comparison()


		 		setState(66)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ComparisonContext: ParserRuleContext {
			open
			func additive() -> [AdditiveContext] {
				return getRuleContexts(AdditiveContext.self)
			}
			open
			func additive(_ i: Int) -> AdditiveContext? {
				return getRuleContext(AdditiveContext.self, i)
			}
			open
			func LT() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.LT.rawValue)
			}
			open
			func LT(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.LT.rawValue, i)
			}
			open
			func GT() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.GT.rawValue)
			}
			open
			func GT(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.GT.rawValue, i)
			}
			open
			func LE() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.LE.rawValue)
			}
			open
			func LE(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.LE.rawValue, i)
			}
			open
			func GE() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.GE.rawValue)
			}
			open
			func GE(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.GE.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_comparison
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitComparison(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitComparison(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func comparison() throws -> ComparisonContext {
		var _localctx: ComparisonContext
		_localctx = ComparisonContext(_ctx, getState())
		try enterRule(_localctx, 10, TemplateXExprParser.RULE_comparison)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(67)
		 	try additive()
		 	setState(72)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 30720) != 0)) {
		 		setState(68)
		 		_la = try _input.LA(1)
		 		if (!(((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 30720) != 0))) {
		 		try _errHandler.recoverInline(self)
		 		}
		 		else {
		 			_errHandler.reportMatch(self)
		 			try consume()
		 		}
		 		setState(69)
		 		try additive()


		 		setState(74)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class AdditiveContext: ParserRuleContext {
			open
			func multiplicative() -> [MultiplicativeContext] {
				return getRuleContexts(MultiplicativeContext.self)
			}
			open
			func multiplicative(_ i: Int) -> MultiplicativeContext? {
				return getRuleContext(MultiplicativeContext.self, i)
			}
			open
			func PLUS() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.PLUS.rawValue)
			}
			open
			func PLUS(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.PLUS.rawValue, i)
			}
			open
			func MINUS() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.MINUS.rawValue)
			}
			open
			func MINUS(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.MINUS.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_additive
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitAdditive(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitAdditive(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func additive() throws -> AdditiveContext {
		var _localctx: AdditiveContext
		_localctx = AdditiveContext(_ctx, getState())
		try enterRule(_localctx, 12, TemplateXExprParser.RULE_additive)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(75)
		 	try multiplicative()
		 	setState(80)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == TemplateXExprParser.Tokens.PLUS.rawValue || _la == TemplateXExprParser.Tokens.MINUS.rawValue) {
		 		setState(76)
		 		_la = try _input.LA(1)
		 		if (!(_la == TemplateXExprParser.Tokens.PLUS.rawValue || _la == TemplateXExprParser.Tokens.MINUS.rawValue)) {
		 		try _errHandler.recoverInline(self)
		 		}
		 		else {
		 			_errHandler.reportMatch(self)
		 			try consume()
		 		}
		 		setState(77)
		 		try multiplicative()


		 		setState(82)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class MultiplicativeContext: ParserRuleContext {
			open
			func unary() -> [UnaryContext] {
				return getRuleContexts(UnaryContext.self)
			}
			open
			func unary(_ i: Int) -> UnaryContext? {
				return getRuleContext(UnaryContext.self, i)
			}
			open
			func MUL() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.MUL.rawValue)
			}
			open
			func MUL(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.MUL.rawValue, i)
			}
			open
			func DIV() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.DIV.rawValue)
			}
			open
			func DIV(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.DIV.rawValue, i)
			}
			open
			func MOD() -> [TerminalNode] {
				return getTokens(TemplateXExprParser.Tokens.MOD.rawValue)
			}
			open
			func MOD(_ i:Int) -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.MOD.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_multiplicative
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitMultiplicative(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitMultiplicative(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func multiplicative() throws -> MultiplicativeContext {
		var _localctx: MultiplicativeContext
		_localctx = MultiplicativeContext(_ctx, getState())
		try enterRule(_localctx, 14, TemplateXExprParser.RULE_multiplicative)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(83)
		 	try unary()
		 	setState(88)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 448) != 0)) {
		 		setState(84)
		 		_la = try _input.LA(1)
		 		if (!(((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 448) != 0))) {
		 		try _errHandler.recoverInline(self)
		 		}
		 		else {
		 			_errHandler.reportMatch(self)
		 			try consume()
		 		}
		 		setState(85)
		 		try unary()


		 		setState(90)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class UnaryContext: ParserRuleContext {
			open
			func NOT() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.NOT.rawValue, 0)
			}
			open
			func unary() -> UnaryContext? {
				return getRuleContext(UnaryContext.self, 0)
			}
			open
			func MINUS() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.MINUS.rawValue, 0)
			}
			open
			func `postfix`() -> PostfixContext? {
				return getRuleContext(PostfixContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_unary
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitUnary(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitUnary(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func unary() throws -> UnaryContext {
		var _localctx: UnaryContext
		_localctx = UnaryContext(_ctx, getState())
		try enterRule(_localctx, 16, TemplateXExprParser.RULE_unary)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(96)
		 	try _errHandler.sync(self)
		 	switch (TemplateXExprParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .NOT:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(91)
		 		try match(TemplateXExprParser.Tokens.NOT.rawValue)
		 		setState(92)
		 		try unary()

		 		break

		 	case .MINUS:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(93)
		 		try match(TemplateXExprParser.Tokens.MINUS.rawValue)
		 		setState(94)
		 		try unary()

		 		break
		 	case .TRUE:fallthrough
		 	case .FALSE:fallthrough
		 	case .NULL:fallthrough
		 	case .LPAREN:fallthrough
		 	case .LBRACK:fallthrough
		 	case .LBRACE:fallthrough
		 	case .NUMBER:fallthrough
		 	case .STRING:fallthrough
		 	case .IDENTIFIER:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(95)
		 		try `postfix`()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class PostfixContext: ParserRuleContext {
			open
			func primary() -> PrimaryContext? {
				return getRuleContext(PrimaryContext.self, 0)
			}
			open
			func postfixOp() -> [PostfixOpContext] {
				return getRuleContexts(PostfixOpContext.self)
			}
			open
			func postfixOp(_ i: Int) -> PostfixOpContext? {
				return getRuleContext(PostfixOpContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_postfix
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitPostfix(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitPostfix(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func `postfix`() throws -> PostfixContext {
		var _localctx: PostfixContext
		_localctx = PostfixContext(_ctx, getState())
		try enterRule(_localctx, 18, TemplateXExprParser.RULE_postfix)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(98)
		 	try primary()
		 	setState(102)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 22020096) != 0)) {
		 		setState(99)
		 		try postfixOp()


		 		setState(104)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class PostfixOpContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return TemplateXExprParser.RULE_postfixOp
		}
	}
	public class MemberAccessContext: PostfixOpContext {
			open
			func DOT() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.DOT.rawValue, 0)
			}
			open
			func IDENTIFIER() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.IDENTIFIER.rawValue, 0)
			}

		public
		init(_ ctx: PostfixOpContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitMemberAccess(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitMemberAccess(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class IndexAccessContext: PostfixOpContext {
			open
			func LBRACK() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.LBRACK.rawValue, 0)
			}
			open
			func expression() -> ExpressionContext? {
				return getRuleContext(ExpressionContext.self, 0)
			}
			open
			func RBRACK() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.RBRACK.rawValue, 0)
			}

		public
		init(_ ctx: PostfixOpContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? TemplateXExprVisitor {
			    return visitor.visitIndexAccess(self)
			}
			else if let visitor = visitor as? TemplateXExprBaseVisitor {
			    return visitor.visitIndexAccess(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class FunctionCallContext: PostfixOpContext {
			open
			func LPAREN() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.LPAREN.rawValue, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(TemplateXExprParser.Tokens.RPAREN.rawValue, 0)
			}
			open
			func argumentList() -> ArgumentListContext? {
				return getRuleContext(ArgumentListContext.self, 0)
			}
